--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.2.1",
     "vue-infinite-scroll": "^2.0.0",
     "vue-resource": "^1.2.1",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
